force-app/main/default/objects/BPM_Annuity__c/BPM_Annuity__c.object-meta.xml
<CustomObject>
    <description>Tracker for Annuity data from BPM team</description>
    <label>BPM Annuity</label>
    <nameField>
        <label>BPM Annuity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BPM Annuities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>