force-app/main/default/objects/BPM_Annuity__c/fields/Alert_Next_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Next_Date_Time__c</fullName>
    <label>Alert Next Date Time</label>
    <type>DateTime</type>
</CustomField>