force-app/main/default/objects/BPM_Annuity__c/fields/Approved_Date_CH_BPM__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_CH_BPM__c</fullName>
    <label>Approved Date (CH)</label>
    <type>Date</type>
</CustomField>