force-app/main/default/objects/BPM_Annuity__c/fields/ASM_Mgr_5__c.field-meta.xml
<CustomField>
    <fullName>ASM_Mgr_5__c</fullName>
    <label>ASM_Mgr_5</label>
    <type>Email</type>
</CustomField>