force-app/main/default/objects/BPM_Annuity__c/fields/ASM_Name__c.field-meta.xml
<CustomField>
    <fullName>ASM_Name__c</fullName>
    <label>ASM_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>