force-app/main/default/objects/BPM_Annuity__c/fields/ASM_Qlook__c.field-meta.xml
<CustomField>
    <fullName>ASM_Qlook__c</fullName>
    <label>ASM_Qlook</label>
    <type>Email</type>
</CustomField>