force-app/main/default/objects/BPM_Annuity__c/fields/Billed_Amt_US_CH_BPM__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amt_US_CH_BPM__c</fullName>
    <label>Billed Amt US (CH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>