force-app/main/default/objects/BPM_Annuity__c/fields/CA_Customer_Approval_Aging__c.field-meta.xml
<CustomField>
    <fullName>CA_Customer_Approval_Aging__c</fullName>
    <formula>IF(
CA_Customer_Approval_Alert__c = TRUE,
TODAY() - CA_CustomerApproval_True_Date__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Customer Approval Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>