force-app/main/default/objects/BPM_Annuity__c/fields/CA_Customer_Approval_Alert__c.field-meta.xml
<CustomField>
    <fullName>CA_Customer_Approval_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Customer Approval Alert</label>
    <type>Checkbox</type>
</CustomField>