force-app/main/default/objects/BPM_Annuity__c/fields/CA_CustomerApproval_True_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_CustomerApproval_True_Date__c</fullName>
    <label>CA CustomerApproval True Date</label>
    <type>Date</type>
</CustomField>