force-app/main/default/objects/BPM_Annuity__c/fields/CA_Expiration_Aging__c.field-meta.xml
<CustomField>
    <fullName>CA_Expiration_Aging__c</fullName>
    <formula>IF(
CA_Expiration_Alert__c = TRUE,
TODAY() - CA_Expiration_True_Date__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Expiration Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>