force-app/main/default/objects/BPM_Annuity__c/fields/CA_Expiration_Next_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CA_Expiration_Next_Date_Time__c</fullName>
    <label>CA Expiration Next Date Time</label>
    <type>DateTime</type>
</CustomField>