force-app/main/default/objects/BPM_Annuity__c/fields/CA_Expiration_True_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_Expiration_True_Date__c</fullName>
    <description>Date CA Expiration Alert set to TRUE</description>
    <label>CA Expiration True Date</label>
    <type>Date</type>
</CustomField>