force-app/main/default/objects/BPM_Annuity__c/fields/CA_Hold_Alert_Next_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CA_Hold_Alert_Next_Date_Time__c</fullName>
    <label>CA Hold Alert Next Date Time</label>
    <type>DateTime</type>
</CustomField>