force-app/main/default/objects/BPM_Annuity__c/fields/CA_Interface_Date_Expired_Next_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CA_Interface_Date_Expired_Next_Date_Time__c</fullName>
    <label>CA Interface Date Expired Next Date Time</label>
    <type>DateTime</type>
</CustomField>