force-app/main/default/objects/BPM_Annuity__c/fields/CA_Intfc_Date_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>CA_Intfc_Date_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Intfc Date Alert Sent</label>
    <type>Checkbox</type>
</CustomField>