force-app/main/default/objects/BPM_Annuity__c/fields/CA_Mgr_4__c.field-meta.xml
<CustomField>
    <fullName>CA_Mgr_4__c</fullName>
    <label>CA_Mgr_4</label>
    <type>Email</type>
</CustomField>