force-app/main/default/objects/BPM_Annuity__c/fields/CA_No_PO_Alert__c.field-meta.xml
<CustomField>
    <fullName>CA_No_PO_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA No PO Alert</label>
    <type>Checkbox</type>
</CustomField>