force-app/main/default/objects/BPM_Annuity__c/fields/CA_No_PO_Next_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_No_PO_Next_Date__c</fullName>
    <label>CA No PO Next Date</label>
    <type>Date</type>
</CustomField>