force-app/main/default/objects/BPM_Annuity__c/fields/CA_No_PO_Next_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CA_No_PO_Next_Date_Time__c</fullName>
    <label>CA No PO Next Date Time</label>
    <type>DateTime</type>
</CustomField>