force-app/main/default/objects/BPM_Annuity__c/fields/Contract_Modifier_CH_BPM__c.field-meta.xml
<CustomField>
    <fullName>Contract_Modifier_CH_BPM__c</fullName>
    <label>Contract Modifier (CH)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>