force-app/main/default/objects/BPM_Annuity__c/fields/Contract_Nbr_CH_BPM__c.field-meta.xml
<CustomField>
    <fullName>Contract_Nbr_CH_BPM__c</fullName>
    <label>Contract Nbr (CH)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>