force-app/main/default/objects/BPM_Annuity__c/fields/Contract_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Contract_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will checked If next notification is scheduled</description>
    <inlineHelpText>It is checked when next notification is scheduled</inlineHelpText>
    <label>Allow Next Alert?</label>
    <type>Checkbox</type>
</CustomField>