force-app/main/default/objects/BPM_Annuity__c/fields/Contract_Sub_Type_CH_BPM__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sub_Type_CH_BPM__c</fullName>
    <label>Contract Sub Type (CH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>