force-app/main/default/objects/BPM_Annuity__c/fields/Country_Code_C_BPM__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_C_BPM__c</fullName>
    <label>Country Code (C)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>