force-app/main/default/objects/BPM_Annuity__c/fields/Cust_Nbr_CH__c.field-meta.xml
<CustomField>
    <fullName>Cust_Nbr_CH__c</fullName>
    <label>Cust Nbr (CH)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>