force-app/main/default/objects/BPM_Annuity__c/fields/Days_to_Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Contract_End__c</fullName>
    <formula>TODAY() - End_Date_CH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Contract End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>