force-app/main/default/objects/BPM_Annuity__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is a checkbox which shoots the immediate notification when Notification Batch will run on the same day.</inlineHelpText>
    <label>Send Immediate Alert?</label>
    <type>Checkbox</type>
</CustomField>