force-app/main/default/objects/BPM_Annuity__c/fields/End_Date_CH__c.field-meta.xml
<CustomField>
    <fullName>End_Date_CH__c</fullName>
    <label>End Date (CH)</label>
    <type>Date</type>
</CustomField>