force-app/main/default/objects/BPM_Annuity__c/fields/Full_Contract_Nbr_CH__c.field-meta.xml
<CustomField>
    <fullName>Full_Contract_Nbr_CH__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Full Contract Nbr (CH)</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>