force-app/main/default/objects/BPM_Annuity__c/fields/Hold_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason_Type__c</fullName>
    <description>To Store contract hold reason type</description>
    <label>Hold Reason Description (CH)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Support Approval Required</fullName>
            </value>
            <value>
                <fullName>Awaiting CPI confirmation (exception approval, CPI announcement)</fullName>
            </value>
            <value>
                <fullName>Awaiting CPI excpetion approval</fullName>
            </value>
            <value>
                <fullName>Awaiting database confirmation</fullName>
            </value>
            <value>
                <fullName>Awaiting interface date</fullName>
            </value>
            <value>
                <fullName>Awaiting PID activation once approvals obtained</fullName>
            </value>
            <value>
                <fullName>Awaiting PO</fullName>
            </value>
            <value>
                <fullName>Awaiting Pre-bill Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting price confirmation for new add ons/item type</fullName>
            </value>
            <value>
                <fullName>Awaiting pricing addendum</fullName>
            </value>
            <value>
                <fullName>Awaiting SAS Team approval</fullName>
            </value>
            <value>
                <fullName>Awaiting SGM Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting signed contract</fullName>
            </value>
            <value>
                <fullName>Awaiting True Up</fullName>
            </value>
            <value>
                <fullName>DNR Awaiting Supporting Docs</fullName>
            </value>
            <value>
                <fullName>Interim Billing not allowed (Active only after interface date passes)</fullName>
            </value>
            <value>
                <fullName>MAC WIP - Need ASM Approval post MAC</fullName>
            </value>
            <value>
                <fullName>Sales Approval</fullName>
            </value>
            <value>
                <fullName>Tax Information Required</fullName>
            </value>
            <value>
                <fullName>Validation in progress</fullName>
            </value>
            <value>
                <fullName>MAC WIP</fullName>
            </value>
            <value>
                <fullName>Prebill engagement program - prebill sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>