force-app/main/default/objects/BPM_Annuity__c/fields/HW_Other_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>HW_Other_Billed_Amount__c</fullName>
    <label>HW/ Other Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>