force-app/main/default/objects/BPM_Annuity__c/fields/Industry_Group_Name_CH__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Name_CH__c</fullName>
    <label>Industry Group Name (CH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>