force-app/main/default/objects/BPM_Annuity__c/fields/Interface_Date_Expired_Aging__c.field-meta.xml
<CustomField>
    <fullName>Interface_Date_Expired_Aging__c</fullName>
    <formula>IF(
Interface_Date_Expired_Alert__c = TRUE,
TODAY() - Interface_Date_Expired_True_Date__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interface Date Expired Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>