force-app/main/default/objects/BPM_Annuity__c/fields/InterfaceDateExpiredAlert__c.field-meta.xml
<CustomField>
    <fullName>InterfaceDateExpiredAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interface Date Expired Alert</label>
    <type>Checkbox</type>
</CustomField>