force-app/main/default/objects/BPM_Annuity__c/fields/LastOfAgrmnt_Record_ID_CH__c.field-meta.xml
<CustomField>
    <fullName>LastOfAgrmnt_Record_ID_CH__c</fullName>
    <label>LastOfAgrmnt Record ID (CH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>