force-app/main/default/objects/BPM_Annuity__c/fields/LastOfAuto_Renewal_PBV_ID_CH__c.field-meta.xml
<CustomField>
    <fullName>LastOfAuto_Renewal_PBV_ID_CH__c</fullName>
    <label>LastOfAuto Renewal PBV ID (CH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>