force-app/main/default/objects/BPM_Annuity__c/fields/LastPO__c.field-meta.xml
<CustomField>
    <fullName>LastPO__c</fullName>
    <label>LastPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>