force-app/main/default/objects/BPM_Annuity__c/fields/LastSOMID__c.field-meta.xml
<CustomField>
    <fullName>LastSOMID__c</fullName>
    <label>LastSOMID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>