force-app/main/default/objects/BPM_Annuity__c/fields/MACC_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MACC_Effective_Date__c</fullName>
    <label>MACC Effective Date</label>
    <type>Date</type>
</CustomField>