force-app/main/default/objects/BPM_Annuity__c/fields/MACC_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>MACC_Transaction_Date__c</fullName>
    <label>MACC Transaction Date</label>
    <type>Date</type>
</CustomField>