force-app/main/default/objects/BPM_Annuity__c/fields/MACC_User__c.field-meta.xml
<CustomField>
    <fullName>MACC_User__c</fullName>
    <label>MACC User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>