force-app/main/default/objects/BPM_Annuity__c/fields/MaxBillFromDate__c.field-meta.xml
<CustomField>
    <fullName>MaxBillFromDate__c</fullName>
    <label>MaxBillFromDate</label>
    <type>Date</type>
</CustomField>