force-app/main/default/objects/BPM_Annuity__c/fields/MaxBillToDate__c.field-meta.xml
<CustomField>
    <fullName>MaxBillToDate__c</fullName>
    <label>MaxBillToDate</label>
    <type>Date</type>
</CustomField>