force-app/main/default/objects/BPM_Annuity__c/fields/MaxLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>MaxLastUpdate__c</fullName>
    <label>MaxLastUpdate</label>
    <type>Date</type>
</CustomField>