force-app/main/default/objects/BPM_Annuity__c/fields/MinInterfaceDate__c.field-meta.xml
<CustomField>
    <fullName>MinInterfaceDate__c</fullName>
    <label>MinInterfaceDate</label>
    <type>Date</type>
</CustomField>