force-app/main/default/objects/BPM_Annuity__c/fields/New_Comments__c.field-meta.xml
<CustomField>
    <fullName>New_Comments__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>