force-app/main/default/objects/BPM_Annuity__c/fields/Notification_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Notification_Attempt__c</fullName>
    <label>Notification Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>