force-app/main/default/objects/BPM_Annuity__c/fields/POC_Other1_Mgr4__c.field-meta.xml
<CustomField>
    <fullName>POC_Other1_Mgr4__c</fullName>
    <label>POC_Other1_Mgr4</label>
    <type>Email</type>
</CustomField>