force-app/main/default/objects/BPM_Annuity__c/fields/POC_Other1_Mgr5__c.field-meta.xml
<CustomField>
    <fullName>POC_Other1_Mgr5__c</fullName>
    <label>POC_Other1_Mgr5</label>
    <type>Email</type>
</CustomField>