force-app/main/default/objects/BPM_Annuity__c/fields/Purchase_Order_Nbr_CH__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Nbr_CH__c</fullName>
    <label>Purchase Order Nbr (CH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>