force-app/main/default/objects/BPM_Annuity__c/fields/SendAdhocMail__c.field-meta.xml
<CustomField>
    <fullName>SendAdhocMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendAdhocMail?</label>
    <type>Checkbox</type>
</CustomField>