force-app/main/default/objects/BPM_Annuity__c/fields/Start_Date_CH__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_CH__c</fullName>
    <label>Start Date (CH)</label>
    <type>Date</type>
</CustomField>