force-app/main/default/objects/BPM_Annuity__c/fields/Status_CH__c.field-meta.xml
<CustomField>
    <fullName>Status_CH__c</fullName>
    <label>Status (CH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>