force-app/main/default/objects/BPM_Annuity__c/fields/SW_Unbilled_Amount__c.field-meta.xml
<CustomField>
    <fullName>SW_Unbilled_Amount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>SW Unbilled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>