force-app/main/default/objects/BPM_Annuity__c/fields/Unbilled_Amt__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Amt__c</fullName>
    <label>Unbilled Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>