force-app/main/default/objects/BPM_Annuity__c/fields/Updated_Comments__c.field-meta.xml
<CustomField>
    <fullName>Updated_Comments__c</fullName>
    <label>Updated Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>