force-app/main/default/objects/BPM_Annuity__c/validationRules/NoNewRecordsShouldCreateFromIpass.validationRule-meta.xml
<ValidationRule>
    <fullName>NoNewRecordsShouldCreateFromIpass</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),$User.Alias=&apos;ipaasuse&apos;)</errorConditionFormula>
    <errorMessage>No Full Contract Number in Salesforce</errorMessage>
</ValidationRule>