force-app/main/default/objects/BPM_Annuity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Industry_Group_Name_CH__c</columns>
    <columns>BPMWorkflowCriteriaForHoldReason__c</columns>
    <columns>Hold_Reason_Type__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>Unbilled_Amt__c</columns>
    <columns>CA_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>Contract_On_Hold__c</columns>
    <columns>Alert_Next_Date_Time__c</columns>
    <columns>Full_Contract_Nbr_CH__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>MinInterfaceDate__c</columns>
    <columns>MaxInterfaceDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Full_Contract_Nbr_CH__c</field>
        <operation>equals</operation>
        <value>1530522R01</value>
    </filters>
    <label>All</label>
</ListView>