force-app/main/default/objects/BPM_Annuity__c/listViews/Hold_Reasons.listView-meta.xml
<ListView>
    <fullName>Hold_Reasons</fullName>
    <columns>NAME</columns>
    <columns>Email_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hold_Reason_Description_CH__c</field>
        <operation>notContain</operation>
        <value>Data</value>
    </filters>
    <label>Hold Reasons</label>
</ListView>