force-app/main/default/objects/BPM_Annuity__c/listViews/Immediate_Notifications_Contract_List.listView-meta.xml
<ListView>
    <fullName>Immediate_Notifications_Contract_List</fullName>
    <columns>NAME</columns>
    <columns>Alert_Next_Date_Time__c</columns>
    <columns>Contract_On_Hold__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>Status_CH__c</columns>
    <columns>Unbilled_Amt__c</columns>
    <columns>Hold_Reason_Type__c</columns>
    <columns>End_Date_CH__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_On_Hold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Immediate Notifications Contract List</label>
</ListView>