force-app/main/default/objects/BPM_Annuity__c/listViews/New_True.listView-meta.xml
<ListView>
    <fullName>New_True</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CA_Hold_Alert__c</columns>
    <columns>CA_Hold_Alert_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CA_Hold_Alert__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CA_Hold_Alert_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>New True</label>
</ListView>