force-app/main/default/objects/BPM_Annuity__c/listViews/No_Cust_Name.listView-meta.xml
<ListView>
    <fullName>No_Cust_Name</fullName>
    <columns>NAME</columns>
    <columns>Cust_Name_CH_BPM__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cust_Name_CH_BPM__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Cust Name</label>
</ListView>